intro revisada por taihú

--- a/introduccion.lyx
+++ b/introduccion.lyx
@@ -334,5 +334,19 @@ utilizados a lo largo de toda la tesina.
  que se derivan del presente trabajo de tesina.
 \end_layout
 
+\begin_layout Standard
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
+Decir que el trabajo de la tesina fue publicado en la JAR.
+ Poner todos los datos de la publicación.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \end_body
 \end_document
