--- a/experimentacion.lyx
+++ b/experimentacion.lyx
@@ -101,6 +101,21 @@ En este capítulo se presentan los experimentos diseñados para evaluar el
  En todos los casos, el hardware utilizado para el procesamiento de los
  experimentos corresponde a una computadora estándar de escritorio con procesado
 r Intel(R) Core(TM) i7-6700HQ de 2.60GHz y 8GiB de memoria RAM.
+\begin_inset Note Comment
+status collapsed
+
+\begin_layout Plain Layout
+Los valores tienen creo que van separados de las unidades.
+ Ej: 8 GB.
+ Lo mismo para medidas de tiempo, error, etc.
+ Hay un paquete de latex que podes encontrar en mi tesis para poner las
+ unidades bien.
+ Creo que se llama units.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -176,8 +191,7 @@ dataset
 \emph default
 compuesto por 23 secuencias capturadas por un vehículo transitando un entorno
  urbano por las calles de la ciudad de Karlsruhe, Alemania.
- La longitud promedio de cada secuencia está en el orden de varios kilómetros
- y transcurren en entornos exteriores.
+ La longitud promedio de cada secuencia está en el orden de varios kilómetros.
 \end_layout
 
 \begin_layout Standard
@@ -185,8 +199,15 @@ El vehículo posee una cámara estéreo montada en su frente, con un
 \emph on
 baseline 
 \emph default
-de ~60cm y una resolución de 1344 x 391 píxeles, que corre a una frecuencia
- de 10 
+de 
+\begin_inset Formula $\sim$
+\end_inset
+
+60cm y una resolución de 1344 
+\begin_inset Formula $\times$
+\end_inset
+
+ 391 píxeles, que corre a una frecuencia de 10 
 \emph on
 frames 
 \emph default
@@ -229,7 +250,7 @@ ground truth
 placement tbh
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -485,7 +506,7 @@ reference "fig:tsukuba_1"
 placement tbh
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -506,6 +527,18 @@ status collapsed
 \begin_layout Plain Layout
 Imágenes pertenecientes al dataset Tsukuba con sus respectivos mapas de
  disparidad (blanco: mayor disparidad, negro: menor disparidad).
+ 
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
+no se ven muchos los mapas de disparidad...
+ Podes o tocar el contraste de las imagenes o podes eleigr otros frames
+ con sus respectivos mapas de disparidad.
+\end_layout
+
+\end_inset
+
  
 \begin_inset CommandInset label
 LatexCommand label
@@ -614,7 +647,17 @@ https://youtu.be/ZLMHx_MU-2k
 
 \end_inset
 
- muestra al sistema corriendo en tiempo real una de las secuencias del dataset
+ 
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
+tenes que reahacer estos videos, así está la ultima implementación.
+\end_layout
+
+\end_inset
+
+muestra al sistema corriendo en tiempo real una de las secuencias del dataset
  KITTI.
  El segundo video 
 \begin_inset Foot
